MGS-1207 TASK Add last fix for letter spacing to desktop aswell

--- a/resources/scss/base/_base.lists.scss
+++ b/resources/scss/base/_base.lists.scss
@@ -169,7 +169,7 @@ article ol.fancy {
         counter-increment: li;
         font-weight: 500;
         line-height: 28px;
-        letter-spacing: -5px;
+        letter-spacing: -0.5px;
         left: -30px;
         top: 0;
         position: absolute;
